Home  page with Small adjustment)

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Point-to-Point Bus Philippines | P2P BUS PH</title>
   </head>
   <body>
-    <div id="root" class="mt-18 px-16 py-8"></div>
+    <div id="root" class="mt-18 pt-8"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
