--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://static.wixstatic.com/media/91e5ce_6dd1b2f253fa4f2a99f1136209813e70%7Emv2.png/v1/fill/w_32%2Ch_32%2Clg_1%2Cusm_0.66_1.00_0.01/91e5ce_6dd1b2f253fa4f2a99f1136209813e70%7Emv2.png" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_back_ios" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Point-to-Point Bus Philippines | P2P BUS PH</title>
   </head>
